--- a/telegram_shop/.env
+++ b/telegram_shop/.env
@@ -1,3 +1,7 @@
 BOT_TOKEN=8283049278:AAFRRg0jnxQn0LSaPF_gUj24wXuRQcbq9Ek
-ADMIN_ID=123456789
+ADMIN_ID=514905878
 DATABASE_URL=sqlite+aiosqlite:///database/shop.db
+
+ADMIN_HOST=0.0.0.0
+ADMIN_PORT=5000
+ADMIN_SECRET_KEY=my-super-secret-key-123
